@@ -1,6 +1,7 @@
 cm4all-beng-proxy (0.7.43) unstable; urgency=low
 
-  * 
+  * http-cache: fixed NULL pointer dereference when storing empty response
+    body on the heap
 
  --
 
